# ScrAIbe-oldxpu

./: .dockerignore  Dockerfile  GreenParty.txt  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt  scraibe_requirements_simplified.txt  setvars.sh  test_faster_whisper.py  test_insanely_fast_whisper.py  test_ipex_llm_single_call.py  test_ipex_llm_transcriber.py  test_ipex_transcriber.py  test_openai_whisper_direct.py  test_transcriber.py  test_xpu_transcriber.py
.github/workflows/: docker.yaml
scraibe/: autotranscript.py  cli.py  diarisation.py  except RuntimeError as e:.py  misc.py  transcriber working old.py  transcriber.py  utils.py
scraibe/deprecated/: old_transcriber.py
