[build-system]
requires = ["poetry-core>=1.8.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "scraibe"
version = "0.0.0" # Will be set by poetry-dynamic-versioning
description = "Transcription tool for audio files based on Whisper and Pyannote"
authors = ["Schmieder, Jacob <jacob.schmieder@dbfz.de>"]
license = "GPL-3.0-or-later"
readme = ["README.md", "LICENSE"]
repository = "https://github.com/JSchmie/ScAIbe"
documentation = "https://jschmie.github.io/ScrAIbe/"
keywords = ["transcription", "audio", "whisper", "pyannote", "speech-to-text", "speech-recognition"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.1',
    'Topic :: Scientific/Engineering :: Artificial Intelligence'
]
packages = [{include = "scraibe"}]
exclude =[
    "__pycache__",
    "*.pyc",
    "test"
]

[tool.poetry.dependencies]
python = "^3.9" # Or ^3.11 if you prefer

# Core application dependencies
tqdm = "^4.66.5"
numpy = "^1.26.4"
openai-whisper = ">=20231117,<20240931"
faster-whisper = "^1.0.3"
"pyannote.audio" = ">=3.1.0"

# --- PyTorch 2.7 Stack for XPU (as per Intel documentation) ---
torch = { version = "==2.7.0", source = "pytorch-xpu" }
torchvision = { version = "==0.22.0", source = "pytorch-xpu" } # Align with PT 2.7.0 if used
torchaudio = { version = "==2.7.0", source = "pytorch-xpu" }
intel-extension-for-pytorch = { version = "==2.7.10+xpu", source = "intel" }
oneccl_bind_pt = { version = "==2.7.0+xpu", source = "intel" }

# --- IPEX-LLM ---
# Now, we need an ipex-llm version compatible with PyTorch 2.7 / IPEX 2.7.
# This might require a specific [xpu_2.7] tag or a recent ipex-llm version.
# If a direct [xpu_2.7] isn't found, you might need to check ipex-llm release notes
# or try a recent version and see if its dependencies are compatible or if it pulls compatible ones.
# For now, let's specify a recent version and the generic [xpu] extra. Poetry will try to make it fit.
# If this causes PyTorch/IPEX downgrades, then ipex-llm doesn't yet have a stable release for PT 2.7.
ipex-llm = { version = ">=2.3.0rc1", extras = ["xpu"], optional = true } # Making it optional for now

# Pinning transformers, tokenizers, accelerate if ipex-llm requires specific older versions.
# These were observed with an ipex-llm 2.3.0rc1 install attempt.
# If ipex-llm works with newer ones, these can be relaxed.
transformers = { version = "==4.37.0", optional = true }
tokenizers = { version = "==0.15.2", optional = true }
accelerate = { version = "==0.23.0", optional = true }

[tool.poetry.extras]
ipex_llm_feature = ["ipex-llm", "transformers", "tokenizers", "accelerate"] # Group ipex-llm related deps

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.poetry-dynamic-versioning]
# ... (your existing dynamic versioning config) ...
enable = true
vcs = "git"
strict = true
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base) }}
    {%- elif branch == 'develop' -%}
        {{ serialize_pep440(bump_version(base), dev = distance) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""

[tool.poetry.group.docs.dependencies]
# ... (your existing docs dependencies) ...
sphinx = "^7.3.7"
sphinx-rtd-theme = ">=2,<4"
markdown-it-py = {version = "~3.0.0", extras = ["plugins"]}
myst-parser = "^3.0.1"
mdit-py-plugins = "^0.4.1"


[tool.poetry.scripts]
scraibe = "scraibe.cli:cli"

[[source]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
# priority = "explicit" # Using explicit source assignment per dependency instead

[[source]]
name = "intel"
url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"
# priority = "explicit"

# PyPI should be implicitly available or can be added if needed:
# [[source]]
# name = "PyPI"
# priority = "default" # or "supplemental"


[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402","F403",'F401']
"scraibe/misc.py" = ["E722"]